# docs/openapi.yml
@@ -225,6 +225,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /posts/{id}:
+    patch:
+      tags:
+        - post
+      summary: Patch a post by id
+      description: patch a post
+      operationId: updatePostById
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: 'The post id that needs to be updated'
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        description: The post description
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdatePost'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Posts'
+        '401':
+          description: Unauthorised
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /logs:
     post:
       tags:
@@ -493,6 +540,12 @@ components:
                         format: date-time
                       profileImage:
                         type: string
+
+    UpdatePost:
+      type: object
+      properties:
+        content:
+          type: string
 
     CreatedUser:
       type: object
