# src/routes/post.js
@@ -1,10 +1,11 @@
 import { Router } from 'express'
-import { create, getAll } from '../controllers/post.js'
+import { create, getAll, updateById } from '../controllers/post.js'
 import { validateAuthentication } from '../middleware/auth.js'
 
 const router = Router()
 
 router.post('/', validateAuthentication, create)
 router.get('/', validateAuthentication, getAll)
+router.patch('/:id', validateAuthentication, updateById)
 
 export default router
